Add js to create elements for moves

--- a/index.html
+++ b/index.html
@@ -45,7 +45,19 @@
       </div>
     </header>
     <div id="main-body">
-      <div id="main-body-container"></div>
+      <div id="main-body-container">
+        <div id="main-body-content">
+          <h1 id="main-body-header">Most commonly overextended pawns</h1>
+          <div id="main-body-left" class="main-body-side">
+            <h2 id="main-left-name">As White</h2>
+            <div id="main-left-content"></div>
+          </div>
+          <div id="main-body-right" class="main-body-side">
+            <h2 id="main-right-name">As Black</h2>
+            <div id="main-right-content"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
