Make small visual improvements for index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="main-body">
       <div id="main-body-container">
         <div id="main-body-content">
-          <h1 id="main-body-header">Most commonly overextended pawns</h1>
+          <h1 id="main-body-header">Most significant overextended pawn moves</h1>
           <div id="main-body-left" class="main-body-side">
             <h2 id="main-left-name">As White</h2>
             <div id="main-left-content"></div>
